--- a/recipes/cinnamon-rolls.html
+++ b/recipes/cinnamon-rolls.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recepies</title>
+    <title>Homemade Cinnamon Rolls</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Recipes for a classic Cinnamon Roll</h1>
 </body>
 </html>
