--- a/recipes/cinnamon-rolls.html
+++ b/recipes/cinnamon-rolls.html
@@ -8,5 +8,68 @@
 </head>
 <body>
     <h1>Recipes for a classic Cinnamon Roll</h1>
+
+    <img src="https://www.allrecipes.com/thmb/g1R_0GvxoF05pufswkjqurCXK2c=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/clone-of-cinnabon-6968d42c7fc54d6587273fc480e19e21.jpeg" alt="Freshly baked cinnamon rolls with lot of glazing" height="120">
+    
+    <p> Welcome to this delicious cinnamon roll recipe! There's nothing quite like the aroma of warm, freshly baked cinnamon rolls wafting through the house. These fluffy and sweet treats are a classic breakfast and brunch favorite that will delight your taste buds with every bite. Perfect for serving at special occasions or simply indulging in a cozy morning at home, this cinnamon roll recipe is a must-try. With just the right amount of cinnamon, sugar, and buttery goodness, these rolls will leave you feeling satisfied and ready to tackle the day ahead. So roll up your sleeves, preheat the oven, and let's get baking! </p>
+
+    <h2>Ingredients:</h2>
+
+    <h3>Dough:</h3>
+    <ul>
+        <li>1 cup warm milk (110 degrees F/45 degrees C)</li>
+        <li>2 eggs, room temperature</li>
+        <li>⅓ cup margarine, melted</li>
+        <li>4 ½ cups bread flour</li>
+        <li>1 teaspoon salt</li>
+        <li>½ cup white sugar</li>
+        <li>2 ½ teaspoons bread machine yeast</li>
+    </ul>
+
+    <h3>Filling:</h3>
+    <ul>
+        <li>1 cup brown sugar, packed</li>
+        <li>2 ½ tablespoons ground cinnamon</li>
+        <li>⅓ cup butter, softened</li>
+    </ul>
+
+    <h3>Icing:</h3>
+    <ul>
+        <li>1 ½ cups confectioners' sugar</li>
+        <li>¼ cup butter, softened</li>
+        <li>1 (3 ounce) package cream cheese, softened</li>
+        <li>½ teaspoon vanilla extract</li>
+        <li>⅛ teaspoon salt</li>
+    </ul>
+
+    <h2>Directions:</h2>
+
+    <h3>Step 1</h3>
+    <p>Prepare dough: Place milk, eggs, margarine, flour, salt, white sugar, and yeast in the pan of a bread machine in the order recommended by the manufacturer. Select dough cycle; press Start.</p>
+
+    <h3>Step 2</h3>
+    <p>When dough has doubled in size, turn it out onto a lightly floured surface. Cover it with a kitchen towel or plastic wrap and let it rest for 10 minutes.</p>
+
+    <h3>Step 3</h3>
+    <p>Roll dough on a lightly floured surface to a 16x21-inch rectangle.</p>
+
+    <h3>Step 4</h3>
+    <p>Prepare filling: Combine brown sugar and cinnamon in a small bowl. Spread softened butter over the dough, then sprinkle cinnamon-sugar mixture evenly over top.</p>
+
+    <h3>Step 5</h3>
+    <p>Starting at the longer end, roll up the dough; cut into 12 rolls. Place rolls in a lightly greased 9x13-inch baking pan. Cover and let rise until nearly doubled, about 30 minutes.</p>
+
+    <h3>Step 6</h3>
+    <p>Meanwhile, preheat the oven to 400 degrees F (200 degrees C).</p>
+
+    <h3>Step 7</h3>
+    <p>Bake rolls in the preheated oven until golden brown, about 15 minutes.</p>
+
+    <h3>Step 8</h3>
+    <p>While rolls are baking, prepare icing: Beat confectioners' sugar, butter, cream cheese, confectioners' sugar, vanilla, and salt until creamy.</p>
+
+    <h3>Step 9</h3>
+    <p>Spread icing on warm rolls before serving.</p>
+
 </body>
 </html>
