Adds the Back to HomePage link to the bottom of the webpage

--- a/recipes/cinnamon-rolls.html
+++ b/recipes/cinnamon-rolls.html
@@ -71,5 +71,7 @@
     <h3>Step 9</h3>
     <p>Spread icing on warm rolls before serving.</p>
 
+    <h3><a href="../index.html">Back to HomePage</a></h3>
+
 </body>
 </html>
