--- a/recipes/gingerbread-biscotti.html
+++ b/recipes/gingerbread-biscotti.html
@@ -50,6 +50,8 @@
     <h3>Step 5</h3>
     <p>When cool enough to touch, cut into 1/2 inch thick diagonal slices. Place sliced biscotti on cookie sheet, 
         and bake an additional 5 to 7 minutes on each side, or until toasted and crispy.</p>
+    
+    <h3><a href="../index.html">Back to HomePage</a></h3>
 
 </body>
 </html>
