--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <p><a href="recipes/cinnamon-rolls.html">Homemade Cinnamon Rolls</a></p>
-    <p><a href="recipes/gingerbread-biscotti.html">GingerBread Biscotti</a></p>
-    <p><a href="recipes/churros-II.html">Churros II</a></p>
+    <div class="Title"><h1>Odin Recipes</h1></div>
+    
+    <div class="list">
+        <p><a href="recipes/cinnamon-rolls.html">Homemade Cinnamon Rolls</a></p>
+        <p><a href="recipes/gingerbread-biscotti.html">GingerBread Biscotti</a></p>
+        <p><a href="recipes/churros-II.html">Churros II</a></p>
+    </div>
 
 </body>
 </html>
